# rurity

./: .gitignore  Cargo.toml  LICENSE  README.md  sh.exe.stackdump
.github/workflows/: rust-check.yml  rust-clippy.yml
editor/: Cargo.toml
editor/engine/logs/: engine.log.2022-05-24
editor/src/: main.rs
engine/: Cargo.toml
engine/asset_system/: Cargo.toml
engine/asset_system/src/: lib.rs  texture.rs
engine/logs/: engine.log.2022-05-18  engine.log.2022-05-23  engine.log.2022-05-24  engine.log.2022-05-25  engine.log.2022-05-31
engine/src/: context.rs  lib.rs  renderer.rs  scene.rs  utils.rs
