[package]
name = "rurity_engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asset_system = { path = "asset_system" }

erupt = "0.22"
raw-window-handle = "0.4.3"
smallvec = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "smallvec",
    "env-filter",
    "time",
], optional = true }
tracing-appender = { version = "0.2", optional = true }
time = { version = "0.3.9", features = [
    "local-offset",
    "macros",
    "formatting",
], optional = true }

[features]
no_log = ["tracing/max_level_off", "tracing/release_max_level_off"]
log = ["dep:tracing-subscriber", "dep:tracing-appender", "dep:time"]

[profile.release]
lto = true
codegen-units = 1
